try fix about on narrow devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -60,11 +60,12 @@ img.active {
 }
 
 #spiega {
-  margin-top: 10%;
+  margin-top: 8%;
   font-size: 120%;
-  width: 30%;
+  width: 33%;
   display: flex;
   flex-direction: column;
+  /* border: 1px solid black; */
 }
 #spiega .text {
   flex: 6;
@@ -80,4 +81,13 @@ img.active {
   height: 30px;
 }
 
-/* @media only screen and (max-width: 600px) {} */
+@media only screen and (max-width: 500px) {
+  #spiega {
+    /* border: 1px solid red; */
+    margin: 20px;
+    width: unset;
+  }
+  #spiega .text {
+    flex: 3;
+  }
+}
